# mh_amcl

./: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
.github/workflows/: main.yaml
datasets/experiment_1/rosbag2_2022_09_13-11_02_34/: metadata.yaml
datasets/experiment_1/rosbag2_2022_09_13-11_23_21/: metadata.yaml
datasets/experiment_1/rosbag2_2022_09_13-11_26_57/: metadata.yaml
datasets/experiment_1/rosbag2_2022_09_13-11_30_00/: metadata.yaml
datasets/experiment_1/rosbag2_2022_09_13-11_32_38/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_46_20/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_46_55/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_47_31/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_48_05/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_48_41/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_49_15/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_49_51/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_50_25/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_51_00/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_52_22/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_52_56/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_53_31/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_54_06/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_54_41/: metadata.yaml
datasets/experiment_2/dynamic/rosbag2_2022_09_13-11_55_15/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_35_56/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_37_13/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_37_55/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_38_31/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_39_06/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_39_40/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_40_24/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_40_59/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_41_34/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_42_08/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_42_49/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_43_23/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_44_00/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_44_33/: metadata.yaml
datasets/experiment_2/static/rosbag2_2022_09_13-11_45_07/: metadata.yaml
include/aamcl/: AAMCL.h  ParticlesDistribution.h  SampleLaserPerceptionModel.h
include/mh_amcl/: Correcter.hpp  LaserCorrecter.hpp  MH_AMCL.hpp  MapMatcher.hpp  MapMatcherBase.hpp  ParticlesDistribution.hpp  PointCloudCorrecter.hpp  Types.hpp  Utils.hpp
launch/: bringup_launch.py  kobuki_launch.py  localization.launch  localization_launch.py  navigation_launch.py  summit_launch.py  tb3_simulation_launch.py  tiago_launch.py
maps/: home.pgm  home.yaml  home_ele.pgm  home_octo.ot  house_uneven.pgm  house_uneven.yaml  house_uneven_ele.pgm  house_uneven_octo.ot  lab.yaml  lab_3d.pgm  lab_3d.yaml  lab_3d_ele.pgm  lab_3d_octo.ot  simple_uneven_house.pgm  simple_uneven_house.yaml  simple_uneven_house_ele.pgm  uneven_floor.pgm  uneven_floor.yaml  uneven_floor_ele.pgm  uneven_floor_octo.ot
mh_amcl/: CMakeLists.txt  README.md  package.xml
mh_amcl/include/mh_amcl/: MH_AMCL.hpp  ParticlesDistribution.hpp
mh_amcl/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  tb3_simulation_launch.py  tiago_launch.py
mh_amcl/maps/: aulario.pgm  aulario.yaml  lab.pgm  lab.yaml
mh_amcl/params/: nav2_params_tb3_sim.yaml  nav2_params_tiago.yaml
mh_amcl/src/: mh_amcl_program.cpp
mh_amcl/src/mh_amcl/: MH_AMCL.cpp  ParticlesDistribution.cpp
mh_amcl/tests/: test_particles.cpp
mh_amcl/tests/rosbag2_2022_09_01-11_42_10/: metadata.yaml
mh_amcl_msgs/: CMakeLists.txt  package.xml
mh_amcl_msgs/msg/: HypoInfo.msg  Info.msg
params/: default.yaml  nav2_params.yaml  nav2_params_kobuki.yaml  nav2_params_summit.yaml  nav2_params_tiago.yaml
src/: aamcl_node.cpp  mh_amcl_program.cpp
src/aamcl/: AAMCL.cpp  InflarionLayerUpdateCosts.cpp  ParticlesDistribution.cpp
src/mh_amcl/: LaserCorrecter.cpp  MH_AMCL.cpp  MapMatcher.cpp  MapMatcherBase.cpp  ParticlesDistribution.cpp  PointCloudCorrecter.cpp  Utils.cpp
tests/: CMakeLists.txt  test1.cpp  test_map_matcher.cpp  test_mh_amcl.cpp  test_particles.cpp
